Alignment fixes

--- a/_sass/includes/_aside.scss
+++ b/_sass/includes/_aside.scss
@@ -1,9 +1,10 @@
 #aside{
     margin-top: 30px;
     text-align: center;
-    padding : 0px 2%;
+    padding : 0px 15px;
     #profile, #tag-wrap {
         margin-bottom: 60px;
+        padding: 0px 15px;
     }
     p b{
         // color: $theme-color;
