--- a/_sass/includes/_header.scss
+++ b/_sass/includes/_header.scss
@@ -3,6 +3,9 @@ header{
     @extend %page-padding;
     nav{
         ul{
+            @media (max-width: 991px){
+                text-align: center;
+            }
             li{
                 position: relative;
                 display: inline-block; 
